# Elune

./: Cargo.toml  LICENSE  LICENSE-VCL1.0  README.md  details.md
src/: config.rs  main.rs
src/utils/: location.rs
src/widgets/: mod.rs
src/widgets/clock/: mod.rs
src/widgets/media/: mpris.rs
src/widgets/system/: cpu.rs
src/widgets/weather/: mod.rs  openweather.rs
